--- a/index.html
+++ b/index.html
@@ -6,16 +6,22 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-
-	<!-- templates -->
-	<script type="text/template" id="person-id">
-		<strong><%= name %></strong> ( <%= age %> ) - <%= job %>
+	<div id="contacts"></div>
+	<!-- views -->
+	<script id="contactTemplate" type="text/template">
+		<img src="<%= photo %>" alt="<%= name %>">
+		<h1><%= name %><span><%= type %></span></h1>
+		<div><%= address %></div>
+		<dl>
+			<dt>Tel:</dt><dd><%= tel %></dd>
+			<dt>Email:</dt><dd><a href="mailto:<%= email %>"><%= email %></a></dd>
+		</dl>
 	</script>
 	<!-- required libralies -->
-	<script src="js/jquery-2.1.4.js"></script>
-	<script src="js/underscore.js"></script>
+	<script src="js/underscore.js"></script>	
+	<script src="js/jquery-1.7.1.js"></script>
 	<script src="js/backbone.js"></script>
 	<script src="js/main.js" ></script>
 </body>
 </html>
+	
