--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div id="contacts"></div>
+	<div id="contacts">
+		<header>
+			<div id="filter"><label>Show me: </label></div>
+		</header>
+		<hr>
+	</div>
 	<!-- views -->
 	<script id="contactTemplate" type="text/template">
 		<img src="<%= photo %>" alt="<%= name %>">
